--- a/views/home/index.html
+++ b/views/home/index.html
@@ -28,7 +28,8 @@
     <main>
         <section class="cats">
             <ul>
-                <li>
+                {{cats}}
+                <!-- <li>
 					<img src="https://cdn.pixabay.com/photo/2015/03/27/13/16/cat-694730_1280.jpg" alt="Black Cat">
 					<h3></h3>
 					<p><span>Breed: </span>Bombay Cat</p>
@@ -78,7 +79,7 @@
 						<li class="btn edit"><a href="">Change Info</a></li>
 						<li class="btn delete"><a href="">New Home</a></li>
 					</ul>
-                </li>
+                </li> -->
             </ul>
         </section>
     </main>
