--- a/views/catShelter.html
+++ b/views/catShelter.html
@@ -19,7 +19,7 @@
         </nav>
         <h1>Cat Shelter</h1>
     </header>
-        <form action="#" class="cat-form">
+        <form action="/cats-findnew-home/{{catId}}" method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Shelter the cat</h2>
             <img src="{{imageLoc}}" alt="{{name}}">
             <label for="name">Name</label>
