--- a/views/edit-cat.hbs
+++ b/views/edit-cat.hbs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="../content/styles/site.css">
+    <link rel="stylesheet" href="/stylesheets/site.css">
     <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
     <title>Cat Shelter</title>
 </head>
@@ -19,17 +19,31 @@
         </nav>
         <h1>Cat Shelter</h1>
     </header>
-        <form action="/cats-edit/{{catId}}" method="POST" class="cat-form" enctype="multipart/form-data">
+        <form action="/cats-edit/{{thisCat.id}}" method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
-            <input name="name" type="text" id="name" value="{{name}}">
+            <input name="name" type="text" id="name" value="{{thisCat.name}}">
             <label for="description">Description</label>
-            <textarea name="description" id="description">{{description}}</textarea>
+            <textarea name="description" id="description">{{thisCat.description}}</textarea>
             <label for="image">Image</label>
             <input name="upload" type="file" id="image">
             <label for="group">Breed</label>
             <select name="breed" id="group">
-                {{catBreeds}}
+                {{!-- {{#each catBreeds}}
+                {{#if this==thisCat.breed}}
+                    <option selected value="{{this}}">{{this}}</option>
+                {{else}}
+                    <option value="{{this}}">{{this}}</option>
+                {{/if}}
+                {{/each}} --}}
+
+                {{#each catBreeds}}
+                    {{#if this.selected}}
+                        <option selected value="{{this.breed}}">{{this.breed}}</option>
+                    {{else}}
+                        <option value="{{this.breed}}">{{this.breed}}</option>
+                    {{/if}}
+                {{/each}}
             </select>
             <button type="submit">Edit Cat</button>
         </form>
