edit and new home (delete) finished

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -38,7 +38,7 @@
                     <p><span>Description: </span>{{this.description}}</p>
                     <ul class="buttons">
                         <li class="btn edit"><a href="/cats/edit-cat/{{this.id}}">Change Info</a></li>
-                        <li class="btn delete"><a href="/cats/cats-find-new-home/{{this.id}}">New Home</a></li>
+                        <li class="btn delete"><a href="/cats/new-home/{{this.id}}">New Home</a></li>
                     </ul>
                 </li>
                 {{/each}}
