--- a/public/stylesheets/site.css
+++ b/public/stylesheets/site.css
@@ -189,7 +189,7 @@ body > form > label:nth-child(3) {
     transform: scale(0.98);
 }
 
-.cat-form {
+.cat-form, .delete-form{
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -207,6 +207,8 @@ body > form > label:nth-child(3) {
     margin: 0 0 0.3rem 0.3rem;
 }
 
+
+
 .cat-form button{
     width: 100px;
     margin: auto;
@@ -219,4 +221,9 @@ body > form > label:nth-child(3) {
     text-transform: uppercase;
     background-color: lightskyblue;
     margin-bottom: 1.5rem;
+}
+
+.delete-form button {
+    background-color: #ff0000d6;
+    justify-content: center;
 }
