--- a/views/edit-cat.hbs
+++ b/views/edit-cat.hbs
@@ -19,7 +19,7 @@
         </nav>
         <h1>Cat Shelter</h1>
     </header>
-        <form action="/cats-edit/{{thisCat.id}}" method="POST" class="cat-form" enctype="multipart/form-data">
+        <form action="/cats/edit-cat/{{thisCat.id}}" method="POST" class="cat-form" enctype="multipart/form-data">
             <h2>Edit Cat</h2>
             <label for="name">Name</label>
             <input name="name" type="text" id="name" value="{{thisCat.name}}">
@@ -29,14 +29,6 @@
             <input name="upload" type="file" id="image">
             <label for="group">Breed</label>
             <select name="breed" id="group">
-                {{!-- {{#each catBreeds}}
-                {{#if this==thisCat.breed}}
-                    <option selected value="{{this}}">{{this}}</option>
-                {{else}}
-                    <option value="{{this}}">{{this}}</option>
-                {{/if}}
-                {{/each}} --}}
-
                 {{#each catBreeds}}
                     {{#if this.selected}}
                         <option selected value="{{this.breed}}">{{this.breed}}</option>
