added search option

--- a/views/add-breed.hbs
+++ b/views/add-breed.hbs
@@ -17,7 +17,7 @@
                 <li><a href="/cats/add-cat">Add Cat</a></li>
             </ul>
         </nav>
-        <h1>Cat Shelter | {{title}}</h1>
+        <h1>Cat Shelter</h1>
     </header>
         <form action="/cats/add-breed" method="POST" class="cat-form">
             <h2>Add Cat Breed</h2>
