--- a/views/search.hbs
+++ b/views/search.hbs
@@ -19,7 +19,7 @@
             </ul>
         </nav>
         <h1>Cat Shelter</h1>
-        <form action="/search" method="GET">
+        <form action="" method="GET">
             <input type="text" name="search">
             <button type="submit">Search</button>
         </form>
