--- a/views/edit-cat.hbs
+++ b/views/edit-cat.hbs
@@ -1,22 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/stylesheets/site.css">
-    <link href="https://use.fontawesome.com/releases/v5.0.7/css/all.css" rel="stylesheet">
-    <title>Cat Shelter</title>
-</head>
 <body>
     <header>
-        <nav>
-            <ul class="navigation">
-                <li><a href="/">Home Page</a></li>
-                <li><a href="/cats/add-breed">Add Breed</a></li>
-                <li><a href="/cats/add-cat">Add Cat</a></li>
-            </ul>
-        </nav>
+        {{>nav}}
         <h1>Cat Shelter</h1>
     </header>
         <form action="/cats/edit-cat/{{thisCat.id}}" method="POST" class="cat-form" enctype="multipart/form-data">
@@ -40,4 +24,3 @@
             <button type="submit">Edit Cat</button>
         </form>
 </body>
-</html>
