--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,3 +1,9 @@
-<h1>{{message}}</h1>
-<h2>{{error.status}}</h2>
-<pre>{{error.stack}}</pre>
+<body>
+    <header>
+        {{>nav}}
+    </header>
+    <h1>{{message}}</h1>
+    <h2>{{error.status}}</h2>
+    <pre>{{error.stack}}</pre>
+</body>
+
